--- a/swa-db-connections/staticwebapp.database.config.json
+++ b/swa-db-connections/staticwebapp.database.config.json
@@ -1,135 +1,98 @@
 {
-  "$schema": "https://github.com/Azure/data-api-builder/releases/download/v1.1.7/dab.draft.schema.json",
-  "data-source": {
-    "database-type": "mssql",
-    "connection-string": "@env('DATABASE_CONNECTION_STRING')",
-    "options": {
-      "set-session-context": false
-    }
-  },
-  "runtime": {
-    "rest": {
-      "enabled": true,
-      "path": "/rest",
-      "request-body-strict": true
+    "$schema": "https://github.com/Azure/data-api-builder/releases/download/v1.1.7/dab.draft.schema.json",
+    "data-source": {
+      "database-type": "mssql",
+      "connection-string": "@env('DATABASE_CONNECTION_STRING')",
+      "options": {
+        "set-session-context": false
+      }
     },
-    "graphql": {
-      "enabled": true,
-      "path": "/graphql",
-      "allow-introspection": true
-    },
-    "host": {
-      "cors": {
-        "origins": [],
-        "allow-credentials": false
-      },
-      "authentication": {
-        "provider": "StaticWebApps"
-      },
-      "mode": "production"
-    }
-  },
-  "entities": {
-    "AddBook": {
-      "source": {
-        "object": "sp_AddBook",
-        "type": "stored-procedure",
-        "parameters": {
-          "Title": "s",
-          "Author": "s",
-          "Genre": "s",
-          "ReadStatus": "b",
-          "Description": "s"
-        }
-      },
+    "runtime": {
       "rest": {
         "enabled": true,
-        "methods": ["post"]
+        "path": "/rest",
+        "request-body-strict": true
       },
-      "permissions": [
-        {
-          "role": "anonymous",
-          "actions": [{ "action": "execute" }]
-        }
-      ]
-    },
-    "UpdateBook": {
-      "source": {
-        "object": "sp_UpdateBook",
-        "type": "stored-procedure",
-        "parameters": {
-          "BookID": "i",
-          "Title": "s",
-          "Author": "s",
-          "Genre": "s",
-          "ReadStatus": "b",
-          "Description": "s"
-        }
-      },
-      "rest": {
+      "graphql": {
         "enabled": true,
-        "methods": ["post"]
+        "path": "/graphql",
+        "allow-introspection": true
       },
-      "permissions": [
-        {
-          "role": "anonymous",
-          "actions": [{ "action": "execute" }]
-        }
-      ]
+      "host": {
+        "cors": {
+          "origins": [],
+          "allow-credentials": false
+        },
+        "authentication": {
+          "provider": "StaticWebApps"
+        },
+        "mode": "production"
+      }
     },
-    "DeleteBook": {
-      "source": {
-        "object": "sp_DeleteBook",
-        "type": "stored-procedure",
-        "parameters": {
-          "BookID": "i"
-        }
+    "entities": {
+      "GetWeatherCity": {
+        "source": {
+          "object": "[weather].[GetWeather]",
+          "type": "stored-procedure",
+          "parameters": {
+            "CityCode": "s"
+          }
+        },
+        "graphql": {
+          "enabled": true,
+          "operation": "mutation",
+          "type": {
+            "singular": "GetWeatherCity",
+            "plural": "GetWeatherCities"
+          }
+        },
+        "rest": {
+          "enabled": true,
+          "methods": [
+            "get"
+          ]
+        },
+        "permissions": [
+          {
+            "role": "anonymous",
+            "actions": [
+              {
+                "action": "execute"
+              }
+            ]
+          }
+        ]
       },
-      "rest": {
-        "enabled": true,
-        "methods": ["post"]
-      },
-      "permissions": [
-        {
-          "role": "anonymous",
-          "actions": [{ "action": "execute" }]
-        }
-      ]
-    },
-    "GetBookByID": {
-      "source": {
-        "object": "sp_GetBookByID",
-        "type": "stored-procedure",
-        "parameters": {
-          "BookID": "i"
-        }
-      },
-      "rest": {
-        "enabled": true,
-        "methods": ["get"]
-      },
-      "permissions": [
-        {
-          "role": "anonymous",
-          "actions": [{ "action": "execute" }]
-        }
-      ]
-    },
-    "GetAllBooks": {
-      "source": {
-        "object": "sp_GetAllBooks",
-        "type": "stored-procedure"
-      },
-      "rest": {
-        "enabled": true,
-        "methods": ["get"]
-      },
-      "permissions": [
-        {
-          "role": "anonymous",
-          "actions": [{ "action": "execute" }]
-        }
-      ]
+      "GetCities": {
+        "source": {
+          "object": "[weather].[GetCities]",
+          "type": "stored-procedure"
+        },
+        "graphql": {
+          "enabled": true,
+          "operation": "mutation",
+          "type": {
+            "singular": "GetCities",
+            "plural": "GetCities"
+          }
+        },
+        "rest": {
+          "enabled": true,
+          "methods": [
+            "get"
+          ]
+        },
+        "permissions": [
+          {
+            "role": "anonymous",
+            "actions": [
+              {
+                "action": "execute"
+              }
+            ]
+          }
+        ]
+      }
     }
   }
-}
+  
